# gazbot

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  CHECKLIST.md  COMMANDS.md  DOCKER.md  Dockerfile  README.md  TELEGRAM_AUTH.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 258ea8e7e896_add_is_active_field_to_events.py  5975dae29910_add_address_field_to_users.py  6cdded4601f6_add_check_in_token_and_checked_in_at_.py  6d5f5d60dac2_add_unique_constraints.py  ae481df4769c_changing_models.py  c7cc80e34d1c_add_status_field_to_registration.py  f13df89881be_initial_migration.py
app/: database.py  main.py
app/core/: auth.py  config.py  logging_config.py  qr_code.py
app/models/: __init__.py  event.py  registration.py  user.py
app/routers/: admin.py  events.py  registrations.py  users.py
app/schemas/: __init__.py  common.py  event.py  examples.py  registration.py  telegram.py  user.py
app/services/: event_crud.py  registration_crud.py  user_crud.py
receipts/: .gitkeep
tests/: conftest.py  test_admin_api.py  test_auth.py  test_crud_services.py  test_events_api.py  test_main.py  test_models.py  test_qr_code.py  test_registrations_api.py  test_users_api.py
