[tool.poetry]
package-mode = false

[project]
name = "gazbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Iaroslav Belous",email = "yarick2205@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "qrcode[pil] (>=8.2,<9.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pytest (>=9.0.1,<10.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
